Sorbet -> Json Schema working
