# app/controllers/internal/projects_controller.rb
@@ -1,23 +1,56 @@
 module Internal
     class ProjectsController < ApplicationController
-        def index
-            @projects = Project.all
-            render json: @projects
-        end
-  
-    def create
-      @project = Project.new(project_params)
-      if @project.save
-        render json: @project, status: :created
-      else
-        render json: @project.errors, status: :unprocessable_entity
+      skip_before_action :verify_authenticity_token
+
+
+      class Task < T::Struct
+        include SorbetJsonSchema
+
+        const :id, Integer
+        const :text, String
+        const :optional_field, T.nilable(String)
       end
-    end
+
+      class Address < T::Struct
+        include SorbetJsonSchema
+
+        const :street, String
+        const :city, String
+      end
+
+      class Project < T::Struct
+        include SorbetJsonSchema
+      
+        const :id, Integer
+        const :name, String
+        const :tasks, T::Array[Task]
+        const :address, Address
+      end
+
+      def index
+          @projects = ::Project.all
+          api_projects = @projects.map { |project| Project.new(
+            id: project.id,
+            name: project.name,
+            tasks: [],
+            address: Address.new(street: '123 Main St', city: 'Anytown')
+          ) }
+          render json: api_projects
+      end
   
-    private
-  
-    def project_params
-      params.require(:project).permit(:name)
+      def create
+        @project = ::Project.new(project_params)
+        if @project.save
+          render json: @project, status: :created
+        else
+          render json: @project.errors, status: :unprocessable_entity
         end
-    end
+      end
+  
+      private
+    
+      def project_params
+        params.require(:project).permit(:name)
+          end
+      end
 end
